--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -595,3 +595,9 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+.container {
+  margin: 0 auto;
+  maxWidth: 960;
+  padding: 0 1.0875rem 1.45rem;
+}
